tests/snapshots/errors/pop_empty_array.mc
let v = new Vec<int> {};
let x = v.pop();
print(x);
